--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 						</div>
 						<div class="col-6 col-15-small"> <!-- width and height -->
 							<header class="major">
-								<h2>More details of my main projects.</h2>
+								<h2>University Work Rundown.</h2>
 							</header>
 							<p>Coming to the end of the first simester of University content I have covered technological content ranging from how to present yourself professionally online, to the physical hardware aspect of games programming and development. <br />
 							Over this time I have been able to continue to improve my skillset in <b>C++</b> whilst using <super>Visual studio</super> as a code editor. <br />
@@ -131,7 +131,7 @@
 						</div>
 						<div class="col-6 col-15-small"> <!-- width and height -->
 							<header class="major">
-								<h2>More details of my main projects.</h2>
+								<h2>Main Games Developed Professionally.</h2>
 							</header>						
 							<p>Having finished working at my first professional games programming employment, at a local mobile games company, I have had the opportunity to improve my ability as working as a team. Whilst developing for the company we used the scripting language of C# within Unity to work to deadlines and complete projects. <br />
 							As a team we developed and released two mobile games named: <b><a href="https://apps.apple.com/app/id1484723352?ls=1" target=”_blank”>Rituals</a></b> and <b><a href="#" target=”_blank”>Lost My Marbles</a></b>.</p>
@@ -149,7 +149,7 @@
 						</div>
 						<div class="col-6 col-15-small"> <!-- width and height -->
 							<header class="major">
-								<h2>More details of my main projects.</h2>
+								<h2>Game Jam Projects.</h2>
 							</header>
 							<p>Having competed in two games jams so far, my respect for the amount of time and effort that they take in order to complete, ensuring the game at the end is fun and unique, has been hightened.<br />
 							Both of these game jams were developed using <b>SDL2</b> and <b>C++</b> in a small team, over a two day span.<br />
