--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 			<section id="three" class="main style1">
 				<div class="container">
 					<div class="row gtr-200">
-						<div class="col-6 col-6-medium"><span class="image fit"><img src="images/Rituals Image.jpg" /></span>
+						<div class="col-6 col-6-medium"><span class="image fit"><img src="images/Rituals+Marbles.png" /></span>
 						</div>
 						<div class="col-6 col-15-small"> <!-- width and height -->
 							<header class="major">
