--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 						</div>
 						<div class="col-6 col-15-small"> <!-- width and height -->
 							<header class="major">
-								<h2>Main Games Developed Professionally.</h2>
+								<h2>Games Developed Professionally.</h2>
 							</header>						
 							<p>Having finished working at my first professional games programming employment, at a local mobile games company, I have had the opportunity to improve my ability as working as a team. Whilst developing for the company we used the scripting language of C# within Unity to work to deadlines and complete projects. <br />
 							As a team we developed and released two mobile games named: <b><a href="https://apps.apple.com/app/id1484723352?ls=1" target=”_blank”>Rituals</a></b> and <b><a href="#" target=”_blank”>Lost My Marbles</a></b>.</p>
