--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<header class="major">
 								<h2>About Me</h2>
 							</header>
-							<p>I am currently an undergraduate student in the first year of my Computer Games Programming Degree at Staffordshire University.<br />
+							<p>I am currently a first year undergraduate student in the first year of my Computer Games Programming Degree at Staffordshire University.<br />
 							Over the past four years I have been learning and developing projects in my spare time, as well as with an eight month span working as a programmer for a local mobile games company <b><a href="https://www.curiosogames.com/" target=”_blank”>Curioso Games</a></b> <br />
 							I am currently focusing my time on working on university projects as well as participating in occasional <b><a href="https://player-two.itch.io/" target=”_blank”>Game Jam</a></b> event.</p>
 						</div>
