--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
 							<header class="major">
 								<h2>About Me</h2>
 							</header>
-							<p>I am currently a first year undergraduate student in the first year of my Computer Games Programming Degree at Staffordshire University.<br />
-							Over the past four years I have been learning and developing projects in my spare time, as well as with an eight month span working as a programmer for a local mobile games company <b><a href="https://www.curiosogames.com/" target=”_blank”>Curioso Games</a></b> <br />
-							I am currently focusing my time on working on university projects as well as participating in occasional <b><a href="https://player-two.itch.io/" target=”_blank”>Game Jam</a></b> event.</p>
+							<p>Welcome to my portfolio, I am currently a first year undergraduate student studying a Computer Games Programming Degree at Staffordshire University, who has also had an eight month span working as a programmer for my local mobile games company <b><a href="https://www.curiosogames.com/" target=”_blank”>Curioso Games</a></b> during 2019. During this time period I used and built upon my knowledge of using the Unity game engine in order to create two published titles onto mobile platforms. <br />
+							Furthermore, I began programming over four years ago, and since then I spent a lot of my free time learning and working on projects to improve and develop my programming skills, along with exposing myself to more areas of programming in general. The aim of this is to continuously expose myself to different areas of games development and programming, building my competency and understaning in a wider variety of areas.<br />
+							Currently, I am focusing my time on working on university projects along with participating in occasional <b><a href="https://player-two.itch.io/" target=”_blank”>Game Jam</a></b> event. <br />
+							</p>
 						</div>
 					</div>
 				</div>
