--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span> -->
 							<iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY" autoplay=0 &mute=0> </iframe>
 							<h3><strong><b>Lost My Marbles</b></strong></h3>
-							<p>Charming <b><super><a href="#" target=”_blank”>Match-4 Dropping Marble Game</a></b></super> developed at Curioso Games.</p>
+							<p>Charming <b><super><a href="https://apps.apple.com/my/app/lost-my-marbles/id1475663553" target=”_blank”>Match-4 Dropping Marble Game</a></b></super> developed at Curioso Games.</p>
 						</div>
 						
 						<div class="col-4 col-12-medium">
