--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/GenericCodeBackground.png" alt="" /></span>
 							<h3><strong><b>Projects</b></strong></h3>
-							<p>Link to a display of my <b><super><a href="#" target=”_blank”>Multiple Side Projects</a></super></b>.</p>
+							<p>Link to a display of my <b><super><a href="https://github.com/BrandonMJRoberts" target=”_blank”>Multiple Side Projects</a></super></b>.</p>
 						</div>
 						
 						<div class="col-4 col-12-medium">
