--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
 							<header class="major">
 								<h2>University Work Rundown.</h2>
 							</header>
-							<p>Coming to the end of the first simester of University content I have covered technological content ranging from how to present yourself professionally online, to the physical hardware aspect of games programming and development. <br />
-							Over this time I have been able to continue to improve my skillset in <b>C++</b> whilst using <super>Visual studio</super> as a code editor. <br />
-							Through covering how data is handled within programs, I have gained a greater understanding of how my programs store and convert data between types, allowing me to develop more efficient programs with the understanding of why there are more efficient.</p>
+							<p>Coming to the end of the first simester of University work, I have covered technological content ranging from how to present yourself professionally online, to the physical hardware aspect of games programming and development. Furthermore, I have been able to work on a recreation of the origional Pacman as a piece of assessed work, allowing me to take a deeper look into how I would go about constructing the iconic game myself.<br />
+							Over this time I have been able to continue to improve my skillset in <b>C++</b>, whilst using <super>Visual studio</super> as a code editor, in a more structured and assisted way than before. <br />
+							Also, through covering how data is handled within programs, I have gained a greater understanding of how my programs store and convert data between types. Allowing me to develop and produce more efficient programs with the underlying understanding of why there are more efficient.</p>
 						</div>
 					</div>
 				</div>
@@ -130,8 +130,8 @@
 							<header class="major">
 								<h2>Games Developed Professionally.</h2>
 							</header>						
-							<p>Having finished working at my first professional games programming employment, at a local mobile games company, I have had the opportunity to improve my ability as working as a team. Whilst developing for the company we used the scripting language of C# within Unity to work to deadlines and complete projects. <br />
-							As a team we developed and released two mobile games named: <b><a href="https://apps.apple.com/app/id1484723352?ls=1" target=”_blank”>Rituals</a></b> and <b><a href="https://apps.apple.com/my/app/lost-my-marbles/id1475663553" target=”_blank”>Lost My Marbles</a></b>.</p>
+							<p>Having had the opportunity to work on two finished, published professional games from start to end, at a local mobile games company, has been invaluable to my understanding and respect for the games industry's development of software.During this time we used the scripting language of C# within Unity to implement new and refactor existing code in order to produce new elements of gameplay and features within the games. <br />
+							As a team we developed and released two mobile games - named: <b><a href="https://apps.apple.com/app/id1484723352?ls=1" target=”_blank”>Rituals</a></b> and <b><a href="https://apps.apple.com/my/app/lost-my-marbles/id1475663553" target=”_blank”>Lost My Marbles</a></b>, both of which taught me many invaluable lessons, ranging beyond technical understanding and programming processes.</p>
 						</div>
 					</div>
 				</div>
@@ -148,9 +148,9 @@
 							<header class="major">
 								<h2>Game Jam Projects.</h2>
 							</header>
-							<p>Having competed in two games jams so far, my respect for the amount of time and effort that they take in order to complete, ensuring the game at the end is fun and unique, has been hightened.<br />
-							Both of these game jams were developed using <b>SDL2</b> and <b>C++</b> in a small team, over a two day span.<br />
-							This jam experience has improved my ability to write effective code quickly, along with giving me the freedom to tackle problems I wouldn't have otherwised encountered, allowing me to tackle them in a way I wouldn't normally have, with little repecussions if it doesn't work.</p>
+							<p>So far I have competed in two games jams, and due to doing so my respect for the amount of time and effort required to complete them has been raised significantly. Expecially when you are working to ensure the game developed is unique and fun to play.<br />
+							Due to a prior experience and understanding of programming using <b>SDL2</b> and <b>C++</b>, in an object oriented aproach, both these game jams were developed in a small team, using these tools, over a two day span.<br />
+							Overall these jam experiences have improved my ability to write effective code quickly, along with giving me the freedom to tackle problems I wouldn't have otherwised encountered, allowing me to tackle them in a way I wouldn't normally have, with little repecussions if it doesn't initially work as planned. Moreover, this experience has also opened my eyes to the importance and usefullness of freely avaliable games engines, such as Unity or Unreal Engine, to allow for less experienced coders to still produce a game, without having to be concerned about every detail of how the program is constructed.</p>
 						</div>
 					</div>
 				</div>
