--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 			<section id="three" class="main style1">
 				<div class="container">
 					<div class="row gtr-200">
-						<div class="col-6 col-6-medium">
+						<div class="col-6 col-8-medium">
 							<span class="image fit"><img src="images/L4ProDev.jpg" /></span>
 						</div>
 						<div class="col-6 col-15-small"> <!-- width and height -->
@@ -124,7 +124,8 @@
 			<section id="three" class="main style1">
 				<div class="container">
 					<div class="row gtr-200">
-						<div class="col-6 col-6-medium"><span class="image fit"><img src="images/Rituals+Marbles.png" /></span>
+						<div class="col-6 col-8-medium">
+							<span class="image fit"><img src="images/Rituals+Marbles.png" /></span>
 						</div>
 						<div class="col-6 col-15-small"> <!-- width and height -->
 							<header class="major">
@@ -141,7 +142,7 @@
 			<section id="three" class="main style1">
 				<div class="container">
 					<div class="row gtr-200">
-						<div class="col-6 col-6-medium">
+						<div class="col-6 col-8-medium">
 							<span class="image fit"><img src="images/LLTK+ZE Image.png" /></span>
 						</div>
 						<div class="col-6 col-15-small"> <!-- width and height -->
