--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 			<section id="three" class="main style1">
 				<div class="container">
 					<div class="row gtr-200">
-						<div class="col-6 col-8-medium">
+						<div class="col-6 col-6-medium">
 							<span class="image fit"><img src="images/L4ProDev.jpg" /></span>
 						</div>
 						<div class="col-6 col-15-small"> <!-- width and height -->
@@ -124,7 +124,7 @@
 			<section id="three" class="main style1">
 				<div class="container">
 					<div class="row gtr-200">
-						<div class="col-6 col-8-medium">
+						<div class="col-6 col-6-medium">
 							<span class="image fit"><img src="images/Rituals+Marbles.png" /></span>
 						</div>
 						<div class="col-6 col-15-small"> <!-- width and height -->
@@ -142,14 +142,14 @@
 			<section id="three" class="main style1">
 				<div class="container">
 					<div class="row gtr-200">
-						<div class="col-6 col-8-medium">
+						<div class="col-6 col-6-medium">
 							<span class="image fit"><img src="images/LLTK+ZE Image.png" /></span>
 						</div>
 						<div class="col-6 col-15-small"> <!-- width and height -->
 							<header class="major">
 								<h2>Game Jam Projects.</h2>
 							</header>
-							<p>So far I have competed in two games jams, and due to doing so my respect for the amount of time and effort required to complete them has been raised significantly. Expecially when you are working to ensure the game developed is unique and fun to play.<br />
+							<p>So far I have competed in two games jams, and due to doing so my respect for the amount of time and effort required to complete them has been raised significantly.<br />
 							Due to a prior experience and understanding of programming using <b>SDL2</b> and <b>C++</b>, in an object oriented aproach, both these game jams were developed in a small team, using these tools, over a two day span.<br />
 							Overall these jam experiences have improved my ability to write effective code quickly, along with giving me the freedom to tackle problems I wouldn't have otherwised encountered, allowing me to tackle them in a way I wouldn't normally have, with little repecussions if it doesn't initially work as planned. Moreover, this experience has also opened my eyes to the importance and usefullness of freely avaliable games engines, such as Unity or Unreal Engine, to allow for less experienced coders to still produce a game, without having to be concerned about every detail of how the program is constructed.</p>
 						</div>
