--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 							</header>
 							<p>So far I have competed in two games jams, and due to doing so my respect for the amount of time and effort required to complete them has been raised significantly.<br />
 							Due to a prior experience and understanding of programming using <b>SDL2</b> and <b>C++</b>, in an object oriented aproach, both these game jams were developed in a small team, using these tools, over a two day span.<br />
-							Overall these jam experiences have improved my ability to write effective code quickly, along with giving me the freedom to tackle problems I wouldn't have otherwised encountered, allowing me to tackle them in a way I wouldn't normally have, with little repecussions if it doesn't initially work as planned. Moreover, this experience has also opened my eyes to the importance and usefullness of freely avaliable games engines, such as Unity or Unreal Engine, to allow for less experienced coders to still produce a game, without having to be concerned about every detail of how the program is constructed.</p>
+							Overall these jam experiences have improved my ability to write effective code quickly, along with giving me the freedom to tackle problems I wouldn't have otherwised encountered, with little repecussions if it doesn't initially work as planned.</p>
 						</div>
 					</div>
 				</div>
