--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					<header class="major">
 						<h2>Previous Projects</h2>
 					</header>
-					<p>Below is a run down of my main prior projects and work.</p>
+					<p>Below are videos showing off my prior work, accompanied with links to the relevent areas:</p>
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
 							<!--
