--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 						
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/GenericCodeBackground.png" alt="" /></span>
-							<h3><strong><b>Projects</b></strong></h3>
+							<h3><strong><b>Previous and Side Projects</b></strong></h3>
 							<p>Link to a display of my <b><super><a href="https://github.com/BrandonMJRoberts" target=”_blank”>Multiple Side Projects</a></super></b>.</p>
 						</div>
 						
@@ -111,8 +111,8 @@
 							<header class="major">
 								<h2>University Work Rundown.</h2>
 							</header>
-							<p>Coming to the end of the first simester of University work, I have covered technological content ranging from how to present yourself professionally online, to the physical hardware aspect of games programming and development. Furthermore, I have been able to work on a recreation of the origional Pacman as a piece of assessed work, allowing me to take a deeper look into how I would go about constructing the iconic game myself.<br />
-							Over this time I have been able to continue to improve my skillset in <b>C++</b>, whilst using <super>Visual studio</super> as a code editor, in a more structured and assisted way than before. <br />
+							<p>Coming to the end of the first simester of University work, I have covered technical content ranging from how to present yourself professionally online, to the physical hardware aspect of games programming and development. Furthermore, I have been able to work on a recreation of the original Pacman as a piece of assessed work, allowing me to take a deeper look into how I would go about constructing the iconic game myself.<br />
+							Over this time I have also been able to continue to improve my skillset in <b>C++</b>, whilst using <super>Visual studio</super> as a code editor, in a more structured and assisted way than before. <br />
 							Also, through covering how data is handled within programs, I have gained a greater understanding of how my programs store and convert data between types. Allowing me to develop and produce more efficient programs with the underlying understanding of why there are more efficient.</p>
 						</div>
 					</div>
@@ -131,8 +131,8 @@
 							<header class="major">
 								<h2>Games Developed Professionally.</h2>
 							</header>						
-							<p>Having had the opportunity to work on two finished, published professional games from start to end, at a local mobile games company, has been invaluable to my understanding and respect for the games industry's development of software.During this time we used the scripting language of C# within Unity to implement new and refactor existing code in order to produce new elements of gameplay and features within the games. <br />
-							As a team we developed and released two mobile games - named: <b><a href="https://apps.apple.com/app/id1484723352?ls=1" target=”_blank”>Rituals</a></b> and <b><a href="https://apps.apple.com/my/app/lost-my-marbles/id1475663553" target=”_blank”>Lost My Marbles</a></b>, both of which taught me many invaluable lessons, ranging beyond technical understanding and programming processes.</p>
+							<p>Having had the opportunity to work on two completed, published, professional games from start to end at a games company, has been invaluable to my understanding and respect for the games industry's development of games software. During this time we used the scripting language of <b>C#</b> within <b>Unity</b> to implement new and refactor existing code in order to produce new elements of gameplay and features within our games. <br />
+							As a team we developed and released two mobile games, namely: <b><a href="https://apps.apple.com/app/id1484723352?ls=1" target=”_blank”>Rituals</a></b> and <b><a href="https://apps.apple.com/my/app/lost-my-marbles/id1475663553" target=”_blank”>Lost My Marbles</a></b>, both of which taught me many invaluable lessons, ranging beyond technical understanding and programming processes.</p>
 						</div>
 					</div>
 				</div>
@@ -150,7 +150,7 @@
 								<h2>Game Jam Projects.</h2>
 							</header>
 							<p>So far I have competed in two games jams, and due to doing so my respect for the amount of time and effort required to complete them has been raised significantly.<br />
-							Due to a prior experience and understanding of programming using <b>SDL2</b> and <b>C++</b>, in an object oriented aproach, both these game jams were developed in a small team, using these tools, over a two day span.<br />
+							As the team had prior experience working with <b>SDL2</b> and <b>C++</b> in an object oriented aproach, both these game jams were using these tools, and were developed in a small team, retaining to the two day time limit.<br />
 							Overall these jam experiences have improved my ability to write effective code quickly, along with giving me the freedom to tackle problems I wouldn't have otherwised encountered, with little repecussions if it doesn't initially work as planned.</p>
 						</div>
 					</div>
