--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 					<div class="row gtr-200">
 						<div class="col-6 col-6-medium">
 							<header class="major">
+								h2 {text-align: centre;}
 								<h2>University Work Rundown.</h2>
 							</header>
 							<span class="image fit"><img src="images/L4ProDev.jpg" /></span>
@@ -127,6 +128,7 @@
 					<div class="row gtr-200">
 						<div class="col-6 col-6-medium">
 							<header class="major">
+								h2 {text-align: centre;}
 								<h2>About Me</h2>
 							</header>
 							<span class="image fit"><img src="images/Rituals+Marbles.png" /></span>
@@ -151,6 +153,7 @@
 					<div class="row gtr-200">
 						<div class="col-6 col-6-medium">	
 							<header class="major">
+								h2 {text-align: centre;}
 								<h2>Game Jam Projects.</h2>
 							</header>
 							<span class="image fit"><img src="images/LLTK+ZE Image.png" /></span>
