--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 							<header class="major">
 								<h2>About Me</h2>
 							</header>
-							<span class="image fit"><img src="images/Rituals+Marbles.png" /></span>
+							<span class="image fit"><img src="images/Rituals+Marbles.jpg" /></span>
 						</div>
 						<div class="col-6 col-15-small"> <!-- width and height -->
 							<!--
