--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 					<div class="row gtr-200">
 						<div class="col-6 col-6-medium">
 							<header class="major">
-								<h2>About Me</h2>
+								<h2>Published Projects</h2>
 							</header>
 							<span class="image fit"><img src="images/Rituals+Marbles.jpg" /></span>
 						</div>
