--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 							<header class="major">
 								<h2>University Work Rundown.</h2>
 							</header>
-							<span class="image fit"><img src="images/L4ProDev.jpg" /></span>
+							<span class="image fit"><img src="images/ProDev+GECCode.jpg" /></span>
 						</div>
 						<div class="col-6 col-15-small"> <!-- width and height -->
 							<p><br /> <br /> <br /> <br />
