--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
 							</header>						
 							-->
 							<p><br /> <br /> <br /> <br />
-							Having had the opportunity to work on two completed, published, professional games from start to end at a games company, has been invaluable to my understanding and respect for the games industry's development of games software. During this time we used the scripting language of <b>C#</b> within <b>Unity</b> to implement new and refactor existing code in order to produce new elements of gameplay and features within our games. <br />
+							Having had the opportunity to work on two published, professional games from beginning to end at a games company, has been invaluable to my understanding and respect for the games industry's development of games software. During this time we used the scripting language of <b>C#</b> within <b>Unity</b> to implement new and refactor existing code in order to produce new elements of gameplay and features within our games. <br />
 							Working as a team we developed and released two mobile games, namely: <b><a href="https://apps.apple.com/app/id1484723352?ls=1" target=”_blank”>Rituals</a></b> and <b><a href="https://apps.apple.com/my/app/lost-my-marbles/id1475663553" target=”_blank”>Lost My Marbles</a></b>, both of which taught me many invaluable lessons, ranging beyond technical understanding and programming processes. <br />
-							Furthermore, through this time working I gained my first impression of how the multiple different disciplines required to make a game work together constructivly, towards a common goal.</p>
+							Furthermore, through this time working I gained my first impression of how the multiple different disciplines required to make a game work together constructivly, towards a common goal. And from this I have a greater appreciation for the teamwork required to complete a project successfully.</p>
 						</div>
 					</div>
 				</div>
