--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<ul class="icons">
 					<li><a href="https://www.linkedin.com/in/brandon-m-j-roberts/" target=”_blank” class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
 					<li><a href="https://github.com/BrandonMJRoberts?tab=repositories" target=”_blank” class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="https://twitter.com/Brandon79245392" class="icon brands alt fa-twitter" target=”_blank”><span class="label">Twitter</span></a></li>
+					<li><a href="https://twitter.com/BrandonRob3rts" class="icon brands alt fa-twitter" target=”_blank”><span class="label">Twitter</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Brandon Roberts</li><li>2020</li>
