--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 						<div class="col-6 col-15-small"> <!-- width and height -->
 							<p><br /> <br /> <br /> <br />
 							So far I have competed in two games jams, and due to doing so my respect and understanding of the amount of time and effort required to complete them has been raised significantly.<br />
-							As the team had prior experience working with <b>SDL2</b> and <b>C++</b> in an object oriented aproach, both these game jams were using these tools, and were developed in a small team, retaining to the two day time limit.<br />
+							As the team had prior experience working with <b>SDL2</b> and <b>C++</b> in an object oriented aproach, both these game jams were completed using these tools, and were developed in a small team, retaining to the two day time limit.<br />
 							Overall these jam experiences have improved my ability to write effective code quickly, along with giving me the freedom to tackle problems I wouldn't have otherwised encountered, with little repecussions if it doesn't initially work as planned.</p>
 						</div>
 					</div>
