--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
 		<!-- Two -->
 			<section id="two" class="main style2">
 				<div class="container">
-					<p>Below are videos showing off my prior work, accompanied with links to the relevent areas:</p>
+					<header class="major">
+						<h2>Previous Projects:</h2>
+					</header>
+					
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
 							<!--
