--- a/index.html
+++ b/index.html
@@ -31,9 +31,12 @@
 		<!-- Two -->
 			<section id="two" class="main style2">
 				<div class="container">
-					<header class="major">
-						<h2>Previous Projects:</h2>
-					</header>
+					
+					<div class="col-6 col-6-medium">
+						<header class="major">
+							<h2>Previous Projects:</h2>
+						</header>
+					</div>
 					
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
