--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<div class="row gtr-150">
 						<div class="col-20 col-15-medium">
 							<header class="major">
-								<h2>About Me</h2>
+								<h2><b>About Me</b></h2>
 							</header>
 							<p>Welcome to my portfolio, I am currently a first year undergraduate student studying a Computer Games Programming Degree at Staffordshire University, who has also had an eight month span working as a programmer for a local mobile games company <b><a href="https://www.curiosogames.com/" target=”_blank”>Curioso Games</a></b>, during 2019. During this time period I used, and built upon my knowledge of the Unity game engine in order to develop and published two titles onto mobile platforms, there are more details on the games below. <br />
 							Furthermore, I began programming over four years ago, with C++ being one of my first languages, and since then I spent a lot of my free time learning and working on projects to improve and develop my programming skills through exposing myself to more areas of programming in general. The aim of this is to continuously work to improve myself in different areas of games development and programming, building my competency and understanding in a wider variety of areas.<br />
@@ -51,7 +51,7 @@
 					
 					<div class="col-6 col-6-medium">
 						<header class="major">
-							<h2>Previous Projects:</h2>
+							<h2><b>Previous Projects:</b></h2>
 						</header>
 					</div>
 					
@@ -109,7 +109,7 @@
 					<div class="row gtr-200">
 						<div class="col-6 col-6-medium">
 							<header class="major">
-								<h2>University Work Rundown.</h2>
+								<h2><b>University Work Rundown.</b></h2>
 							</header>
 							<span class="image fit"><img src="images/ProDev+GECCode.jpg" /></span>
 						</div>
@@ -130,7 +130,7 @@
 					<div class="row gtr-200">
 						<div class="col-6 col-6-medium">
 							<header class="major">
-								<h2>Published Projects</h2>
+								<h2><b>Published Projects</b></h2>
 							</header>
 							<span class="image fit"><img src="images/Rituals+Marbles.jpg" /></span>
 						</div>
@@ -155,7 +155,7 @@
 					<div class="row gtr-200">
 						<div class="col-6 col-6-medium">
 							<header class="major">
-								<h2>Game Jam Projects.</h2>
+								<h2><b>Game Jam Projects.</b></h2>
 							</header>
 							<span class="image fit"><img src="images/LLTK+ZE Image.png" /></span>
 						</div>
