--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span> -->
 							<iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY" autoplay=0 &mute=0> </iframe>
 							<h3><strong><b>Lost My Marbles</b></strong></h3>
-							<p>Charming <b><super><a href="https://apps.apple.com/my/app/lost-my-marbles/id1475663553" target=”_blank”>Match-4 Dropping Marble Game</a></b></super> developed at Curioso Games.</p>
+							<p>Charming <b><a href="https://apps.apple.com/my/app/lost-my-marbles/id1475663553" target=”_blank”>Match-4 Dropping Marble Game</a></b> developed at Curioso Games.</p>
 						</div>
 						
 						<div class="col-4 col-12-medium">
@@ -83,7 +83,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/GenericCodeBackground.png" alt="" /></span>
 							<h3><strong><b>Previous and Side Projects</b></strong></h3>
-							<p>Link to a display of my <b><super><a href="https://github.com/BrandonMJRoberts" target=”_blank”>Multiple Side Projects</a></super></b>.</p>
+							<p>Link to a display of my <b><a href="https://github.com/BrandonMJRoberts" target=”_blank”>Multiple Side Projects</a></b>.</p>
 						</div>
 						
 						<div class="col-4 col-12-medium">
