--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							<span class="image fit"><img src="images/pacmanImage.png" alt="" /></span> -->
 							<iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY" autoplay=0 &mute=0> </iframe>
 							<h3><strong><b>Pacman</b></strong></h3>
-							<p>Re-creation of the classic <b><super><a href="https://github.com/BrandonMJRoberts/Pacman" target=”_blank”>Pacman</b></super></a> game <b><super><a href="https://apps.apple.com/my/app/lost-my-marbles/id1475663553" target=”_blank”>Match-4 Dropping Marble Game</a></super></b>, written using a university framework for my Games Engine Creation module.</p>
+							<p>Re-creation of the classic <b><super><a href="https://github.com/BrandonMJRoberts/Pacman" target=”_blank”>Pacman</b></super></a> game, written using a university framework for my Games Engine Creation module.</p>
 						</div>
 						
 						<div class="col-4 col-12-medium">
