--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 						<div class="col-4 col-12-medium">
 							<!--
 							<span class="image fit"><img src="images/pacmanImage.png" alt="" /></span> -->
-							<iframe width="420" height="345" src="https://www.youtube.com/embed/_9Q-yXCpHEU" autoplay=0 &mute=0> </iframe>
+							<iframe width="420" height="345" src="https://www.youtube.com/embed/kz1UOoUzApE" autoplay=0 &mute=0> </iframe>
 							<h3><strong><b>Pacman</b></strong></h3>
 							<p>Re-creation of the classic <b><super><a href="https://github.com/BrandonMJRoberts/Pacman" target=”_blank”>Pacman</b></super></a> game, written using a university framework for my Games Engine Creation module.</p>
 						</div>
