--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 						</div>
 						
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/LTTK+ZE Image.png" alt="" /></span>
+							<span class="image fit"><img src="images/LLTK+ZE Image.png" alt="" /></span>
 							<!--<span class="image fit"><img src="images/ZombieEscapeIcon.png" alt="images/pic04.jpg" /></span> -->
 							<h3><strong><b>Zombie Escape</b></strong></h3>
 							<p>Developed during a two day Game Jam <b><super><a href="https://player-two.itch.io/zombie-escape" target=”_blank”>Ludum Dare 42</b></super></a> whilst working in a small team.</p>
