--- a/Super Mario 3/index.html
+++ b/Super Mario 3/index.html
@@ -15,8 +15,8 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<h1><a href="index.html">Escape Velocity</a></h1>
-							<p>A free responsive site template by HTML5 UP</p>
+							<h1><a href="index.html">Super Mario Bros 3 Project</a></h1>
+							<p>An Ambitious Project Created For My First Year Of University</p>
 						</div>
 				</section>
 
@@ -28,9 +28,6 @@
 						<p class="style3">It's <strong>responsive</strong>, built on <strong>HTML5</strong> and <strong>CSS3</strong>, and released for
 						free under the <a href="http://html5up.net/license">Creative Commons Attribution 3.0 license</a>, so use it for any of
 						your personal or commercial projects &ndash; just be sure to credit us!</p>
-						<ul class="actions">
-							<li><a href="#" class="button style3 large">Proceed</a></li>
-						</ul>
 					</div>
 				</section>
 
@@ -47,42 +44,42 @@
 						<!-- Features -->
 							<section id="features">
 								<header class="style1">
-									<h2>Dolor consequat feugiat amet veroeros</h2>
-									<p>Feugiat dolor nullam orci pretium phasellus justo</p>
+									<h2>Details:</h2>
+									<p>A Rundown Of The Main Features and Concepts Implemented</p>
 								</header>
 								<div class="feature-list">
 									<div class="row">
-										<div class="col-6 col-12-medium">
+										<div class="col-12 col-12-medium">
 											<section>
 												<h3 class="icon fa-comment">Mattis velit diam vulputate</h3>
 												<p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate et magna feugiat laoreet vel velit lorem.</p>
 											</section>
 										</div>
-										<div class="col-6 col-12-medium">
+										<div class="col-12 col-12-medium">
 											<section>
 												<h3 class="icon solid fa-sync">Lorem ipsum dolor sit veroeros</h3>
 												<p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate et magna feugiat laoreet vel velit lorem.</p>
 											</section>
 										</div>
-										<div class="col-6 col-12-medium">
+										<div class="col-12 col-12-medium">
 											<section>
 												<h3 class="icon fa-image">Pretium phasellus justo lorem</h3>
 												<p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate et magna feugiat laoreet vel velit lorem.</p>
 											</section>
 										</div>
-										<div class="col-6 col-12-medium">
+										<div class="col-12 col-12-medium">
 											<section>
 												<h3 class="icon solid fa-cog">Tempus sed pretium orci</h3>
 												<p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate et magna feugiat laoreet vel velit lorem.</p>
 											</section>
 										</div>
-										<div class="col-6 col-12-medium">
+										<div class="col-12 col-12-medium">
 											<section>
 												<h3 class="icon solid fa-wrench">Aliquam consequat et feugiat</h3>
 												<p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate et magna feugiat laoreet vel velit lorem.</p>
 											</section>
 										</div>
-										<div class="col-6 col-12-medium">
+										<div class="col-12 col-12-medium">
 											<section>
 												<h3 class="icon solid fa-check">Dolore laoreet aliquam mattis</h3>
 												<p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate et magna feugiat laoreet vel velit lorem.</p>
@@ -126,7 +123,7 @@
 
 			<!-- Footer -->
 				<section id="footer" class="wrapper">
-					<div class="title">The Rest Of It</div>
+					<div class="title">Further Details</div>
 					<div class="container">
 						<header class="style1">
 							<h2>Ipsum sapien elementum portitor?</h2>
@@ -135,12 +132,10 @@
 								Nam pharetra laoreet imperdiet volutpat etiam feugiat.
 							</p>
 						</header>
-						<div class="row">
-							<div class="col-6 col-12-medium">
-
+						
 						<div id="copyright">
 							<ul>
-								<li>&copy; Brandon Roberts 2021</li><li><a href="index.html">Main Page</a></li><li>Design: HTML5 UP</li>
+								<li>&copy; Brandon Roberts 2021</li><li><a href="BrandonMJRoberts/index.html">Main Page</a></li><li>Design: HTML5 UP</li>
 							</ul>
 						</div>
 					</div>
