--- a/Super Mario 3/index.html
+++ b/Super Mario 3/index.html
@@ -45,16 +45,10 @@
 							<section id="features">
 								<header class="style1">
 									<h2>Details:</h2>
-									<p>A Rundown Of The Main Features and Concepts Implemented</p>
+									<p>A Rundown Of The Main Features and Concepts Implemented:</p>
 								</header>
 								<div class="feature-list">
 									<div class="row">
-										<div class="col-12 col-12-medium">
-											<section>
-												<h3 class="icon fa-comment">Mattis velit diam vulputate</h3>
-												<p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate et magna feugiat laoreet vel velit lorem.</p>
-											</section>
-										</div>
 										<div class="col-12 col-12-medium">
 											<section>
 												<h3 class="icon solid fa-sync">Lorem ipsum dolor sit veroeros</h3>
@@ -123,16 +117,7 @@
 
 			<!-- Footer -->
 				<section id="footer" class="wrapper">
-					<div class="title">Further Details</div>
-					<div class="container">
-						<header class="style1">
-							<h2>Ipsum sapien elementum portitor?</h2>
-							<p>
-								Sed turpis tortor, tincidunt sed ornare in metus porttitor mollis nunc in aliquet.<br />
-								Nam pharetra laoreet imperdiet volutpat etiam feugiat.
-							</p>
-						</header>
-						
+					<div class="container">						
 						<div id="copyright">
 							<ul>
 								<li>&copy; Brandon Roberts 2021</li><li><a href="BrandonMJRoberts/index.html">Main Page</a></li><li>Design: HTML5 UP</li>
