--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<section id="header">
 				<div class="inner">
 					<span class="icon solid major fa-cloud"></span>
-					<h1><strong>WORK IN PROGRESS! A portfolio of work.</strong></h1>
+					<h1><strong>A portfolio of work.</strong></h1>
 					<p>Brandon Roberts</p>
 				</div>
 		</section>
@@ -505,7 +505,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<section id="footer">
 				<ul class="icons">
 					<li><a href="https://www.linkedin.com/in/brandon-m-j-roberts/" target=”_blank” class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
-					<li><a href="Super Mario 3/index.html" target=”_blank” class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
+					<li><a href="Pacman/index.html" target=”_blank” class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
 					<li><a href="https://github.com/BrandonMJRoberts?tab=repositories" target=”_blank” class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="https://twitter.com/BrandonRob3rts" class="icon brands alt fa-twitter" target=”_blank”><span class="label">Twitter</span></a></li>
 				</ul>
