--- a/Pacman/index.html
+++ b/Pacman/index.html
@@ -28,7 +28,7 @@
 				<section id="intro" class="wrapper style1">
 					<div class="title">Introduction</div>
 					<div class="container">
-						<p class="style1">So in case you were wondering what this is all about ...</p>
+						<p class="style1">This page is a rundown of a Pacman re-creation I created for my first simester in university</p>
 						<p class="style3">It's <strong>responsive</strong>, built on <strong>HTML5</strong> and <strong>CSS3</strong>, and released for
 						free under the <a href="http://html5up.net/license">Creative Commons Attribution 3.0 license</a>, so use it for any of
 						your personal or commercial projects &ndash; just be sure to credit us!</p>
