--- a/Pacman/index.html
+++ b/Pacman/index.html
@@ -41,25 +41,24 @@
 					
 					<div id="carousel">
 					    <div class="slide">
-						<img src="images/pic02.jpg"/>
+						<img src="http://placehold.it/300x150"/>
 					    </div>
 					    <div class="slide">
-						<img src="images/pic02.jpg"/>
+						<img src="http://placehold.it/300x150"/>
 					    </div>
 					    <div class="slide">
-						<img src="images/pic02.jpg"/>
+						<img src="http://placehold.it/300x150"/>
 					    </div>
 					    <div class="slide">
-						<img src="images/pic02.jpg"/>
+						<img src="http://placehold.it/300x150"/>
 					    </div>
 					    <div class="slide">
-						<img src="images/pic02.jpg"/>
+						<img src="http://placehold.it/300x150"/>
 					    </div>
 					    <div class="slide">
-						<img src="images/pic02.jpg"/>
+						<img src="http://placehold.it/300x150"/>
 					    </div>
 					</div>
-				</section>
 
 			<!-- Main -->
 				<section id="main" class="wrapper style2">
