--- a/Pacman/index.html
+++ b/Pacman/index.html
@@ -39,25 +39,16 @@
 				<section id="highlights" class="wrapper style3">
 					<div class="title">Images And Videos</div>
 					
-					<div id="carousel">
-					    <div class="slide">
-						<img src="http://placehold.it/300x150"/>
-					    </div>
-					    <div class="slide">
-						<img src="http://placehold.it/300x150"/>
-					    </div>
-					    <div class="slide">
-						<img src="http://placehold.it/300x150"/>
-					    </div>
-					    <div class="slide">
-						<img src="http://placehold.it/300x150"/>
-					    </div>
-					    <div class="slide">
-						<img src="http://placehold.it/300x150"/>
-					    </div>
-					    <div class="slide">
-						<img src="http://placehold.it/300x150"/>
-					    </div>
+					<p><code>wrapAround: true</code></p>
+
+					<!-- Flickity HTML init -->
+					<div class="gallery js-flickity"
+					  data-flickity-options='{ "wrapAround": true }'>
+					  <div class="gallery-cell"></div>
+					  <div class="gallery-cell"></div>
+					  <div class="gallery-cell"></div>
+					  <div class="gallery-cell"></div>
+					  <div class="gallery-cell"></div>
 					</div>
 
 			<!-- Main -->
