--- a/Pacman/index.html
+++ b/Pacman/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Super Mario Bros 3 Project</title>
+		<title>Pacman Re-Creation Project</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,8 +15,8 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<h1><a href="index.html">Super Mario Bros 3 Project</a></h1>
-							<p>An Ambitious Project Created For My First Year Of University</p>
+							<h1><a href="index.html">Pacman Re-Creation Project</a></h1>
+							<p>A Re-Creation Of Pacman Developed For My First Year Or University</p>
 						</div>
 				</section>
 
