--- a/Pacman/index.html
+++ b/Pacman/index.html
@@ -15,7 +15,7 @@
 
 				<!-- Nav -->
 					<nav id="nav">
-						<a href="#" class="icon solid fa-home"><span>Main Header</span></a>
+						<a href="#" class="icon solid fa-home"><span>Main</span></a>
 						<a href="#work" class="icon solid fa-folder"><span>Demo Content</span></a>
 						<a href="#contact" class="icon solid fa-envelope"><span>Main Concepts</span></a>
 					</nav>
