--- a/Pacman/index.html
+++ b/Pacman/index.html
@@ -16,8 +16,8 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<a href="#" class="icon solid fa-home"><span>Main</span></a>
-						<a href="#work" class="icon solid fa-folder"><span>Demo Content</span></a>
-						<a href="#contact" class="icon solid fa-envelope"><span>Main Concepts</span></a>
+						<a href="#work" class="icon solid fa-folder"><span>Images</span></a>
+						<a href="#contact" class="icon solid fa-envelope"><span>Gameplay</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -31,7 +31,7 @@
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-									<img src="images/me.jpg" alt="" />
+									<img src="images/me.jpg" alt="Pacman Chased By Ghosts" />
 								</a>
 							</article>
 
