--- a/Pacman/index.html
+++ b/Pacman/index.html
@@ -27,7 +27,7 @@
 							<article id="home" class="panel intro">
 								<header>
 									<h1>Pacman</h1>
-									<p>Re-creation Of Pacman For My First Year Of University</p>
+									<p>Project To Re-create Pacman For Semester 1 Of University</p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
